--- a/releases.yaml
+++ b/releases.yaml
@@ -45,7 +45,7 @@ releases:
             linux-libc-dev: 5.10.35-wb142
             logsave: 1.46.2-2+wb1
             modbus-utils: 1.2.8
-            modbus-utils-rpc: 1.2.1
+            modbus-utils-rpc: 1.2.2
             modemmanager: 1.20.0-1~bpo11+1-wb105
             modemmanager-dev: 1.20.0-1~bpo11+1-wb105
             modemmanager-doc: 1.20.0-1~bpo11+1-wb105
@@ -66,7 +66,6 @@ releases:
             python-wb-mcu-fw-updater: 1.5.2
             python3-intelhex: 2.3.0-1
             python3-json-rpc: 1.9.2.wb1
-            python3-modbus-utils-rpc: 1.1.7
             python3-mosquitto: 1.3.4-2contactless1
             python3-mqttrpc: 1.2.1
             python3-paho-socket: 0.0.3-1
@@ -77,7 +76,7 @@ releases:
             python3-wb-mqtt-metrics: 0.3.1
             python3-wb-nm-helper: 1.28.0
             python3-wb-test-suite-deps: 1.17.2
-            python3-wb-update-manager: 1.3.1
+            python3-wb-update-manager: 1.3.2
             rapidscada: 6.1.1-1
             sensor-tools-scada-client: '1.1'
             serial-tool: 1.2.0
@@ -88,9 +87,9 @@ releases:
             wb-configs: 3.18.4
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.6.2
-            wb-device-manager: 1.5.5
+            wb-device-manager: 1.5.6
             wb-diag-collect: 1.6.1
-            wb-dt-overlays: 1.6.0+wb1
+            wb-dt-overlays: 1.6.0
             wb-essential: 1.17.2
             wb-homa-adc: 2.6.3
             wb-homa-gpio: 2.12.1
@@ -139,7 +138,7 @@ releases:
             wb-test-suite: '1.20'
             wb-test-suite-deps: 1.12.0
             wb-test-suite-dummy: 1.17.2
-            wb-update-manager: 1.3.1
+            wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
             wb-utils: 4.11.2
             wb-zigbee2mqtt: 1.3.1
