--- a/releases.yaml
+++ b/releases.yaml
@@ -313,7 +313,7 @@ releases:
             z-way-server: 4.0.2-lws16
             zbw: '1.2'
             zigbee2mqtt: 1.30.2
-            zigbee2mqtt-1.18.1: 1.18.1
+            zigbee2mqtt-1.18.1: 1.18.1-wb101
 
         wb6/bullseye:
             <<: *packages-wb-2304
