--- a/releases.yaml
+++ b/releases.yaml
@@ -574,29 +574,29 @@ releases:
         firmwares:
             # WB-MR
             mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
-            mr2m_k6: 1.19.2
-            mr2mG: 1.19.2
-            mr3: 1.19.2
-            mr3G: 1.19.2
-            mr6: 1.19.2
-            mr6_042: 1.19.2
-            mr6G: 1.19.2
-            mr6c: 1.19.2
-            mr6cG: 1.19.2
-            mr6c_042: 1.19.2
-            mr6cu: 1.19.2
-            mr6cu_042: 1.19.2
-            mr6cuG: 1.19.2
-            mr6cpG: 1.19.2
-            mrps6: 1.19.2
-            mrps6G: 1.19.2
-            mrwl3: 1.19.2
-            mrwl3G: 1.19.2
-            mrwl3_042: 1.19.2
+            mr2m_k6: 1.20.1
+            mr2mG: 1.20.1
+            mr3: 1.20.1
+            mr3G: 1.20.1
+            mr6: 1.20.1
+            mr6_042: 1.20.1
+            mr6G: 1.20.1
+            mr6c: 1.20.1
+            mr6cG: 1.20.1
+            mr6c_042: 1.20.1
+            mr6cu: 1.20.1
+            mr6cu_042: 1.20.1
+            mr6cuG: 1.20.1
+            mr6cpG: 1.20.1
+            mrps6: 1.20.1
+            mrps6G: 1.20.1
+            mrwl3: 1.20.1
+            mrwl3G: 1.20.1
+            mrwl3_042: 1.20.1
             mrwm2G: 1.20.2
-            wbmwac: 1.19.2
-            wbmwac_042: 1.19.2
-            wbmwacG: 1.19.2
+            wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            wbmwacG: 1.20.1
             # WB-MS
             m1w2: 4.29.11
             m1w2-21: 4.29.11
@@ -651,8 +651,8 @@ releases:
             mrgbwG: 3.3.4
             ledG: 3.3.4
             # WB-MCM
-            mcm8: 1.4.3
-            mcm8G: 1.4.3
+            mcm8: 1.6.0
+            mcm8G: 1.6.0
             # WB-MAO
             mao4: 2.4.1
             mao4G: 2.4.1
