--- a/releases.yaml
+++ b/releases.yaml
@@ -144,7 +144,7 @@ releases:
             wb-zigbee2mqtt: 1.3.2
             z-way-server: 4.0.2-lws16
             zbw: '1.2'
-            zigbee2mqtt: 1.32.1-wb101
+            zigbee2mqtt: 1.32.2
             zigbee2mqtt-1.18.1: 1.18.1-wb101
 
         wb6/bullseye:
