--- a/releases.yaml
+++ b/releases.yaml
@@ -84,7 +84,7 @@ releases:
             u-boot-tools-wb: 2:2021.10+wb1.6.0
             wb-ble-tesliot: 1.0.8
             wb-cc2652p-flasher: 1.0.0
-            wb-configs: 3.18.5
+            wb-configs: 3.18.5-wb100
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.6.2
             wb-device-manager: 1.5.6
@@ -140,7 +140,7 @@ releases:
             wb-test-suite-dummy: 1.17.3
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
-            wb-utils: 4.12.0-wb100
+            wb-utils: 4.12.0-wb101
             wb-zigbee2mqtt: 1.3.2
             z-way-server: 4.0.2-lws16
             zbw: '1.2'
