--- a/releases.yaml
+++ b/releases.yaml
@@ -140,7 +140,7 @@ releases:
             wb-test-suite-dummy: 1.17.3
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
-            wb-utils: 4.12.0-wb101
+            wb-utils: 4.12.0-wb102
             wb-zigbee2mqtt: 1.3.2
             z-way-server: 4.0.2-lws16
             zbw: '1.2'
@@ -159,7 +159,8 @@ releases:
 
             linux-headers-wb7: 5.10.35-wb142
             linux-image-wb7: 5.10.35-wb142
-            u-boot-wb7: 2:2021.10+wb1.6.0
+            u-boot-tools-wb: 2:2021.10+wb1.7.0
+            u-boot-wb7: 2:2021.10+wb1.7.0
 
     wb-2304:
         packages-common: &packages-wb-2304
