--- a/releases.yaml
+++ b/releases.yaml
@@ -733,7 +733,7 @@ releases:
             map3h51: 2.7.0
             map6s: 2.6.3            #таргет не проходит стенд калибровки на прошивке 2.7.0
             map6s51: 2.6.3          #таргет не проходит стенд калибровки на прошивке 2.7.0
-            map6se: 2.6.3           #таргет не проходит стенд калибровки на прошивке 2.7.0
+            map6se: 2.7.0
             map12e: 2.7.0
             map12eG: 2.7.0
             map12h: 2.7.0
