--- a/releases.yaml
+++ b/releases.yaml
@@ -693,32 +693,32 @@ releases:
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.1
             # WB-MS
-            m1w2: 4.29.11
-            m1w2-21: 4.29.11
-            m1w2G21: 4.29.11
-            mir: 4.29.11
-            mir64: 4.29.11
-            mir64_gd: 4.29.11
-            mai2cc: 4.29.11
-            ms-33: 4.29.11
-            msv2-4.0: 4.29.11
-            msv2-4.0_gd: 4.29.11
-            msv2G42: 4.30.0
-            msw3-48mh: 4.29.11
-            msw3-48mh30: 4.29.11
-            msw3-49: 4.29.11
-            msw3-49th30: 4.29.11
-            msw3-49-467: 4.29.11
-            msw3-49_gd: 4.29.11
-            msw3-49gd_oa: 4.29.11
-            msw3G49th: 4.29.11
-            msw3G419: 4.29.11
-            msw3G419th: 4.29.11
-            msw3Gc: 4.29.11
-            msw3G419L: 4.29.11
-            msw5G: 4.30.0
-            msw5GL: 4.30.0
-            msw5Gth: 4.29.11
+            m1w2: 4.31.0
+            m1w2-21: 4.31.0
+            m1w2G21: 4.31.0
+            mir: 4.29.11            # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mir64: 4.31.0
+            mir64_gd: 4.31.0
+            mai2cc: 4.31.0
+            ms-33: 4.31.0
+            msv2-4.0: 4.31.0
+            msv2-4.0_gd: 4.31.0
+            msv2G42: 4.31.0
+            msw3-48mh: 4.31.0
+            msw3-48mh30: 4.29.11    # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            msw3-49: 4.31.0
+            msw3-49th30: 4.31.0
+            msw3-49-467: 4.31.0
+            msw3-49_gd: 4.31.0
+            msw3-49gd_oa: 4.31.0
+            msw3G49th: 4.31.0
+            msw3G419: 4.31.0
+            msw3G419th: 4.31.0
+            msw3Gc: 4.31.0
+            msw3G419L: 4.31.0
+            msw5G: 4.31.0
+            msw5GL: 4.31.0
+            msw5Gth: 4.31.0
             # WB-MD
             mdm3: 2.6.6
             mdm3_042: 2.6.6
