--- a/releases.yaml
+++ b/releases.yaml
@@ -166,6 +166,12 @@ releases:
             <<: *packages-wb-2307
             wb-mqtt-homeui: 2.75.6-a70ab64c-wb100
 
+    wb-2307-cb8ea449:
+        wb7/bullseye:
+            <<: *packages-wb-2307
+            mplc4-oni-plc-w: 1.3.3.14561
+            wb-mqtt-homeui: 2.75.6-cb8ea449-wb100
+
     wb-2304:
         packages-common: &packages-wb-2304
             atecc-util: 0.4.10
