--- a/releases.yaml
+++ b/releases.yaml
@@ -644,6 +644,7 @@ releases:
             mdm3G26: 2.6.6
             # WB-MAP
             map3e: 2.6.2
+            map3e16: 2.7.1
             map3e_36: 2.6.2
             map3e_031f6: 2.6.2
             map3eG: 2.6.2
@@ -739,22 +740,23 @@ releases:
             mdm3_26: 2.6.6
             mdm3G26: 2.6.6
             # WB-MAP
-            map3e: 2.7.0
-            map3e_36: 2.7.0
-            map3e_031f6: 2.7.0
-            map3eG: 2.7.0
-            map3h: 2.7.0
-            map3h51: 2.7.0
-            map6s: 2.6.3            #таргет не проходит стенд калибровки на прошивке 2.7.0
-            map6s51: 2.6.3          #таргет не проходит стенд калибровки на прошивке 2.7.0
-            map6se: 2.7.0
-            map12e: 2.7.0
-            map12eG: 2.7.0
-            map12h: 2.7.0
-            map3eG16: 2.7.0
-            map6seG16: 2.7.0
-            map6sG16: 2.6.3         #таргет не проходит стенд калибровки на прошивке 2.7.0
-            map6semG16: 2.7.0
+            map3e: 2.7.1
+            map3e16: 2.7.1
+            map3e_36: 2.7.1
+            map3e_031f6: 2.7.1
+            map3eG: 2.7.1
+            map3h: 2.7.1
+            map3h51: 2.7.1
+            map6s: 2.6.3            #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6s51: 2.6.3          #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6se: 2.7.1
+            map12e: 2.7.1
+            map12eG: 2.7.1
+            map12h: 2.7.1
+            map3eG16: 2.7.1
+            map6seG16: 2.7.1
+            map6sG16: 2.6.3         #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6semG16: 2.7.1
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.4.0
