--- a/releases.yaml
+++ b/releases.yaml
@@ -143,7 +143,8 @@ releases:
             wb-update-notifier: 0.1.0
             wb-utils: 4.12.0-wb105
             wb-zigbee2mqtt: 1.3.2
-            z-way-server: 4.0.2-lws16
+            z-way-server: 4.1.1-lws16
+            z-way4wb: 1.4
             zbw: '1.2'
             zigbee2mqtt: 1.32.2
             zigbee2mqtt-1.18.1: 1.18.1-wb101
@@ -879,6 +880,7 @@ staging:
         - "u-boot-wb?"
         - "wb-*"
         - "z-way-server"
+        - "z-way4wb"
         - "zbw"
         - "zigbee2mqtt*"
 
