--- a/releases.yaml
+++ b/releases.yaml
@@ -145,6 +145,7 @@ releases:
             wb-zigbee2mqtt: 1.3.2
             z-way-server: 4.1.1-lws16
             z-way4wb: 1.4
+            webif: 1.5
             zbw: '1.2'
             zigbee2mqtt: 1.32.2-wb101
             zigbee2mqtt-1.18.1: 1.18.1-wb102
@@ -881,6 +882,7 @@ staging:
         - "wb-*"
         - "z-way-server"
         - "z-way4wb"
+        - "webif"
         - "zbw"
         - "zigbee2mqtt*"
 
