--- a/releases.yaml
+++ b/releases.yaml
@@ -613,10 +613,11 @@ releases:
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.1
-            # WB-MS
+            # WB-M1W2
             m1w2: 4.29.11
             m1w2-21: 4.29.11
             m1w2G21: 4.29.11
+            # WB-MS
             mir: 4.29.11
             mir64: 4.29.11
             mir64_gd: 4.29.11
@@ -714,29 +715,29 @@ releases:
             m1w2-21: 4.31.0     # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2G21: 4.32.0
             # WB-MS
-            mir: 4.29.11
-            mir64: 4.29.11
-            mir64_gd: 4.29.11
-            mai2cc: 4.29.11
-            ms-33: 4.29.11
-            msv2-4.0: 4.29.11
-            msv2-4.0_gd: 4.29.11
-            msv2G42: 4.30.0
-            msw3-48mh: 4.31.0
+            mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mir64: 4.31.1
+            mir64_gd: 4.31.1
+            mai2cc: 4.31.1
+            ms-33: 4.31.1
+            msv2-4.0: 4.31.1
+            msv2-4.0_gd: 4.31.1
+            msv2G42: 4.31.1
+            msw3-48mh: 4.31.1
             msw3-48mh30: 4.29.11    # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            msw3-49: 4.31.0
-            msw3-49th30: 4.31.0
-            msw3-49-467: 4.31.0
-            msw3-49_gd: 4.31.0
-            msw3-49gd_oa: 4.31.0
-            msw3G49th: 4.31.0
-            msw3G419: 4.31.0
-            msw3G419th: 4.31.0
-            msw3Gc: 4.31.0
-            msw3G419L: 4.31.0
-            msw5G: 4.31.0
-            msw5GL: 4.31.0
-            msw5Gth: 4.31.0
+            msw3-49: 4.31.1
+            msw3-49th30: 4.31.1
+            msw3-49-467: 4.31.1
+            msw3-49_gd: 4.31.1
+            msw3-49gd_oa: 4.31.1
+            msw3G49th: 4.31.1
+            msw3G419: 4.31.1
+            msw3G419th: 4.31.1
+            msw3Gc: 4.31.1
+            msw3G419L: 4.31.1
+            msw5G: 4.31.1
+            msw5GL: 4.31.1
+            msw5Gth: 4.31.1
             # WB-MD
             mdm3: 2.6.6
             mdm3_042: 2.6.6
@@ -765,8 +766,8 @@ releases:
             mrgbwG: 3.4.0
             ledG: 3.4.0
             # WB-MCM
-            mcm8: 1.6.0
-            mcm8G: 1.6.0
+            mcm8: 1.6.1
+            mcm8G: 1.6.1
             # WB-MAO
             mao4: 2.4.1
             mao4G: 2.4.1
